﻿2007-02-04  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/menuwindow.cpp: Fixed a small glitch when dragging the menu
	window.

2007-02-03  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/sprites/player-female-base.png: Made the standing and
	walking of the female characters more feminine.
	* data/equipment.xml, data/graphics/sprites/leg-cotton-male.png,
	data/graphics/sprites/leg-cotton-male.xml,
	data/graphics/sprites/leg-cotton-female.png,
	data/graphics/sprites/leg-cotton-female.xml,
	data/graphics/sprites/leg-jeans-male.png,
	data/graphics/sprites/leg-jeans-male.xml,
	data/graphics/sprites/leg-jeans-female.png,
	data/graphics/sprites/leg-jeans-female.xml: Added different sprites
	for male and female pants.

2007-02-02  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/engine.h, src/engine.cpp, src/being.h, src/being.cpp: Moved
	responsibility of loading emoticons to the Being class.

2007-02-01  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* src/gui/updatewindow.cpp: File handle should be closed before
	attempting to remove/rename files.
	* src/gui/button.h: Fixed buttons loosing focus.

2007-02-01  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/updatewindow.cpp, src/gui/updatewindow.h: A bit of cleanup
	and defined a helper function for calculating the alder32 checksum of
	a file. Probably not fixing any bug though.

2007-02-01  Philipp Sehmisch  <tmw@crushnet.org>

	* data/equipment.xml, data/items.xml,
	data/graphics/items/armor-chest-chainmail.png,
	data/graphics/sprites/chest-chainmail-female.png,
	data/graphics/sprites/chest-chainmail-female.xml,
	data/graphics/sprites/chest-chainmail-male.png,
	data/graphics/sprites/chest-chainmail-male.xml: Added chainmail by
	"The Judge". The proposed values are: Item ID: 625, Sprite ID: 25,
	Defence: 12, Weight: 120.
	* data/graphics/sprites/chest-cotton-female.png: Huh? Shouldn't this
	be on svn for ages?

2007-01-30  Eugenio Favalli  <elvenprogrammer@gmail.com>
