@@ -134,18 +134,22 @@ Viewport::draw(gcn::Graphics *gcnGraphics)
         mViewY = player_y;
     };
 
-    if (mMap) {
+    // Don't move camera so that the end of the map is on screen
+    int viewXmax = ((mMap->getWidth() - 1) * 32) - graphics->getWidth();
+    int viewYmax = ((mMap->getHeight() - 1) * 32) - graphics->getHeight();
+    if (mMap)
+    {
         if (mViewX < 0) {
             mViewX = 0;
         }
         if (mViewY < 0) {
             mViewY = 0;
         }
-        if (mViewX > (mMap->getWidth() - midTileX) * 32) {
-            mViewX = (mMap->getWidth() - midTileX) * 32;
+        if (mViewX > viewXmax) {
+            mViewX = viewXmax;
         }
-        if (mViewY > (mMap->getHeight() - midTileY) * 32) {
-            mViewY = (mMap->getHeight() - midTileY) * 32;
+        if (mViewY > viewYmax) {
+            mViewY = viewYmax;
         }
     }
 
