@@ -1,4 +1,9 @@
-﻿2007-02-04  Bjørn Lindeijer  <bjorn@lindeijer.nl>
+﻿2007-02-10  Philipp Sehmisch  <tmw@crushnet.org>
+
+	* src/gui/viewport.cpp: Fixed the bug in the scrolling limitation that made
+	it possible to scroll outside of the map in the south and east.
+
+2007-02-04  Bjørn Lindeijer  <bjorn@lindeijer.nl>
 
 	* src/gui/menuwindow.cpp: Fixed a small glitch when dragging the menu
 	window.
